BroadleafCommerce/QA#743 - Fixed spacing on entity form save button

--- a/admin/broadleaf-open-admin-platform/src/main/resources/open_admin_style/css/admin/new-admin-changes.css
+++ b/admin/broadleaf-open-admin-platform/src/main/resources/open_admin_style/css/admin/new-admin-changes.css
@@ -221,6 +221,7 @@ circle {
 
 .app-content .content .section-content .main-content .content-area-title-bar>.button-group .button {
     margin-top: 0;
+    margin-left: -3px;
 }
 
 .app-content .content .section-content .main-content .content-area-title-bar>.button {
